<resources>
    <string name="app_name">Warhammer Card</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Warhammer RPG</string>
    <string name="nav_header_subtitle">Świat Fantasy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="karta">Karta</string>
    <string name="umiejetnosci">Umiejętności Podstawowe</string>
    <string name="umiejetnosci2">Umiejętności Zaawansowane</string>
    <string name="menu_home">Witaj świat Fantasy</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_test">Test</string>

    <string name="imie">Imię: </string>
    <string name="wiek">Wiek: </string>
    <string name="wzrost">Wzrost: </string>
    <string name="wlosy">Włosy: </string>
    <string name="oczy">Oczy: </string>
    <string name="wlasna_karta">Wlasna Karta</string>
    <string name="losuj">Losuj</string>
    <string name="cecha">Cecha</string>
    <string name="pocz_ntkowa">Począntkowa</string>
    <string name="rozwin_cia">Rozwinęcia</string>
    <string name="aktualna">Aktualna</string>
    <string name="rasa">Rasa</string>
    <string name="klasa">Klasa</string>
    <string name="profesja">Profesja</string>
    <string name="poziom_profesji">Poziom Profesji</string>
    <string name="cie_ka_profesji">Ścieżka Profesji</string>
    <string name="status">Status</string>
    <string name="nazwa">Nazwa</string>
    <string name="_0">0</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="roz">Roz</string>
    <string name="suma">Suma</string>
    <string name="wpisz_nazwe_kampanii">Wpisz nazwe kampanii</string>
    <string name="dodaj_kampanie">Dodaj Kampanie</string>
    <string name="usu_wszystko">Usuń wszystko</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="doswiadczenie">Doświadczenie</string>
    <string name="bohater">Bohater</string>
    <string name="przeznaczenie">Przeznaczenie</string>
    <string name="szybko">Szybkość</string>
    <string name="motywacja">Motywacja</string>
    <string name="aktualny">Aktualny</string>
    <string name="kr_tka_motywacja_postaci">Krótka motywacja postaci</string>
    <string name="pomoc">Pomoc</string>
    <string name="bieg">Bieg</string>
    <string name="ch_d">Chód</string>
    <string name="szcz_cia">Szczęścia</string>
    <string name="dodatkowe">Dodatkowe</string>
    <string name="determinacja">Determinacja</string>
    <string name="wydany">Wydany</string>
    <string name="ambicja_kr_tkoterminowa">Ambicja krótkoterminowa</string>
    <string name="dla_mistrza_gry">Dla Mistrza Gry</string>
    <string name="typ_pancerza">Typ Pancerza</string>
</resources>