<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pl.edu.us.warhammer_card.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_fragment_Karta"
            app:destination="@id/fragment_Karta" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="pl.edu.us.warhammer_card.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="pl.edu.us.warhammer_card.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_test"
        android:name="pl.edu.us.warhammer_card.ui.test.TestFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/fragment_Karta"
        android:name="pl.edu.us.warhammer_card.ui.home.KartaFragment"
        android:label="Twoi Karty"
        tools:layout="@layout/fragment_karta" >
        <action
            android:id="@+id/action_fragment_Karta_to_fragment_karta_main"
            app:destination="@id/fragment_karta_main" />
    </fragment>

    <fragment
        android:id="@+id/fragment_karta_front"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaFront.KartaFrontFragment"
        android:label="Informacja o postaci"
        tools:layout="@layout/fragment_karta_front" >

    </fragment>

    <fragment
        android:id="@+id/fragment_karta_cechy"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaCechy.KartaCechyFragment"
        android:label="Cechy"
        tools:layout="@layout/fragment_karta_cechy" >
    </fragment>



    <fragment
        android:id="@+id/fragment_karta_umiejetnosci"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaUmiejetnosci.KartaUmiejetnosciFragment"
        android:label="@string/umiejetnosci"
        tools:layout="@layout/fragment_karta_umiejetnosci" >

    </fragment>

    <fragment
        android:id="@+id/fragment_karta_umiejetnosci2"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaUmiejetnosci.KartaUmiejetnosciFragment2"
        android:label="@string/umiejetnosci2"
        tools:layout="@layout/fragment_karta_umiejetnosci2" >
    </fragment>

    <fragment
        android:id="@+id/fragment_karta_main"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaMainFragment"
        android:label="Pierwsza Strona"
        tools:layout="@layout/fragment_karta_main" >

        <action
            android:id="@+id/action_fragment_karta_main_to_fragment_karta_front"
            app:destination="@id/fragment_karta_front" />
        <action
            android:id="@+id/action_fragment_karta_main_to_fragment_karta_umiejetnosci2"
            app:destination="@id/fragment_karta_umiejetnosci2" />
        <action
            android:id="@+id/action_fragment_karta_main_to_fragment_karta_cechy"
            app:destination="@id/fragment_karta_cechy" />
        <action
            android:id="@+id/action_fragment_karta_main_to_fragment_karta_umiejetnosci"
            app:destination="@id/fragment_karta_umiejetnosci" />
        <action
            android:id="@+id/action_fragment_karta_main_to_kartaPunktyFragment"
            app:destination="@id/kartaPunktyFragment" />
        <action
            android:id="@+id/action_fragment_karta_main_to_kartaTalentFragment"
            app:destination="@id/kartaTalentFragment" />
        <action
            android:id="@+id/action_fragment_karta_main_to_kartaAmbicjeIDruzynaFragment"
            app:destination="@id/kartaAmbicjeIDruzynaFragment" />
        <action
            android:id="@+id/action_fragment_karta_main_to_kartaMainFragment2"
            app:destination="@id/kartaMainFragment2"

            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>
    <fragment
        android:id="@+id/kartaPunktyFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaPunkty.KartaPunktyFragment"
        android:label="Punkty"
        tools:layout="@layout/fragment_karta_punkty">

    </fragment>
    <fragment
        android:id="@+id/kartaTalentFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaTalenty.KartaTalentFragment"
        android:label="Talenty"
        tools:layout="@layout/fragment_karta_talent" >

    </fragment>
    <fragment
        android:id="@+id/kartaAmbicjeIDruzynaFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaAmbicjeIDruzyna.KartaAmbicjeIDruzynaFragment"
        android:label="Ambicaj i Drużyna"
        tools:layout="@layout/framgent_ambicje_i_druzyna" >

    </fragment>
    <fragment
        android:id="@+id/kartaMainFragment2"
        android:name="pl.edu.us.warhammer_card.ui.karta.KartaMainFragment2"
        android:label="Druga Strona"
        tools:layout="@layout/fragment_karta_main_2" >
        <action
            android:id="@+id/action_kartaMainFragment2_to_pancerzFragment"
            app:destination="@id/pancerzFragment" />
        <action
            android:id="@+id/action_kartaMainFragment2_to_bronFragment"
            app:destination="@id/bronFragment" />
        <action
            android:id="@+id/action_kartaMainFragment2_to_psychologiaFragment"
            app:destination="@id/psychologiaFragment" />
        <action
            android:id="@+id/action_kartaMainFragment2_to_czaryIModlitwyFragment"
            app:destination="@id/czaryIModlitwyFragment" />
        <action
            android:id="@+id/action_kartaMainFragment2_to_zamoznoscIZywotnoscFragment"
            app:destination="@id/zamoznoscIZywotnoscFragment" />
        <action
            android:id="@+id/action_kartaMainFragment2_to_wyposazeniaFragment"
            app:destination="@id/wyposazeniaFragment" />
        <action
            android:id="@+id/action_kartaMainFragment2_to_fragment_karta_main"
            app:destination="@id/fragment_karta_main"

            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"

            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            />
    </fragment>
    <fragment
        android:id="@+id/zamoznoscIZywotnoscFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta2.zamoznoscizywotnosc.ZamoznoscIZywotnoscFragment"
        android:label="Zamożność i żywotność"
        tools:layout="@layout/fragment_karta_zamoznosci_i_zywotnosc" />
    <fragment
        android:id="@+id/bronFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta2.bron.BronFragment"
        android:label="Broń"
        tools:layout="@layout/fragment_karta_bron" />
    <fragment
        android:id="@+id/czaryIModlitwyFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta2.czaryimodlitwy.CzaryIModlitwyFragment"
        android:label="Czary i Modlitwy"
        tools:layout="@layout/fragment_karta_czary_i_modlitwy" />
    <fragment
        android:id="@+id/pancerzFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta2.pancerz.PancerzFragment"
        android:label="Pancerz"
        tools:layout="@layout/fragment_karta_pancerz" />
    <fragment
        android:id="@+id/psychologiaFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta2.psychologia.PsychologiaFragment"
        android:label="Psychologia i Mutacje"
        tools:layout="@layout/fragment_karta_psychologia_zepsucie_i_mutacje" />
    <fragment
        android:id="@+id/wyposazeniaFragment"
        android:name="pl.edu.us.warhammer_card.ui.karta2.wyposazenie.WyposazeniaFragment"
        android:label="Wyposażenie"
        tools:layout="@layout/fragment_karta_wyposazenie" />


    <fragment
        android:id="@+id/nav_mistrz_gry"
        android:name="pl.edu.us.warhammer_card.ui.mistrzgry.rozdzialy.RozdzialFragment"
        android:label="Rozdziały"
        tools:layout="@layout/fragment_rozdzial" >
        <action
            android:id="@+id/action_rozdzialFragment_to_podRozdzialFragment"
            app:destination="@id/podRozdzialFragment" />
    >
    </fragment>


    <fragment
        android:id="@+id/podRozdzialFragment"
        android:name="pl.edu.us.warhammer_card.ui.mistrzgry.rozdzialy.PodRozdzialFragment"
        android:label="PodRozdzialFragment" >
        <action
            android:id="@+id/action_podRozdzialFragment_to_nav_mistrz_gry"
            app:destination="@id/nav_mistrz_gry" />
        <argument
            android:name="chapter_index"
            app:argType="integer" />
    </fragment>


</navigation>